changing the base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://selvarajan.in/"
+baseURL = "https://selvarajan2006.github.io/enlighten/docs/"
 languageCode = "en-us"
 title = "Enlightening KT"
 theme = "book"
