--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://selvarajan2006.github.io/enlighten/"
+baseURL = "https://coder-selvarajan.github.io/enlighten/"
 languageCode = "en-us"
 title = "Enlightening KT"
 theme = "book2"
